Don't use -1 in Mac OS native notification action index responses

The negative value used to represent that no action button was used, but
that has since been changed to use base::Optional instead. This is
causing code on Mac to unintentionally believe that a button was used
anyway, which can lead to unexpected behaviour.

BUG=774983

Change-Id: I8c13aff77b77772077c9145b705d84904eb67a55
Reviewed-on: https://chromium-review.googlesource.com/730753
Commit-Queue: Peter Beverloo <peter@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511882}
Former-commit-id: 178f4e39143777e5db15a6b7abc992ceb33df4ce